# Leno

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Leno.qrc  README.md
res/i18n/: Leno_en_US.ts  Leno_zh_CN.ts
src/: PluginInterface.h  PluginManager.cpp  PluginManager.h  YOLO.hpp  main.cpp  stdafx.h
src/models/: NodeModel.hpp
src/nodes/: ImageData.hpp  ImageLoaderNode.hpp  ImageProcessBaseNode.hpp  ImageShowNode.hpp  VideoLoaderNode.hpp
src/nodes/base/: ThresholdNode.hpp
src/nodes/yolo/: YOLONode.hpp
ui/: D_Nodes.cpp  D_Nodes.h  T_BasicAlgorithm.cpp  T_BasicAlgorithm.h  T_Custom.cpp  T_Custom.h  T_Home.cpp  T_Home.h  T_YOLO.cpp  T_YOLO.h  d_mainwindow.cpp  d_mainwindow.h  mainwindow.cpp  mainwindow.h
ui/LWindow/: LWindow.cpp  LWindow.h  LWindowPrivate.cpp  LWindowPrivate.h
